# ignite

./: main.py  pyproject.toml  teste.py
core/: habits.py  records.py  utils.py
data/: data.json  data_backup.json
src/: database.py
src/core/: goals.py  habits.py  records.py  statistics.py  steps.py  timer.py
src/services/: goals_service.py  habits_service.py  records_service.py  statistics_service.py  steps_service.py  timer_service.py
src/utils/: clear_terminal.py  common.py  options.py
