[project]
name = "ignite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
	"ALL",
]
ignore = [
	"B905",    # zip() without an explicit strict= parameter
	"D100",    # Missing docstring in public module
	"D101",    # Missing docstring in public class
	"D102",    # Missing docstring in public method
	"D103",    # Missing docstring in public function
	"D104",    # Missing docstring in public package
	"T201",    # print() found
	"PLR0913", # Too many arguments in function definition
	"PLW0603", # Global statement
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"